# Epocha

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo.py  portaled_data.txt
python/: EpochaStorage.py
python_epocha/: __init__.py  epocha_storage.py
